--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     staalkontroll dvalemodus, inntil videre.</p>
 
                 <p>Har du spørsmål eller henvendelser så send oss en mail på <a
-                        href="mailto:post@staalkontroll.no">post@staalkontroll.no</a>.</p>
+                        href="mailto:post@foraas.no">post@foraas.no</a>.</p>
             </div>
         </div>
     </main>
