--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 
                 <p>Har du spørsmål eller henvendelser så send oss en mail på <a
                         href="mailto:post@foraas.no">post@foraas.no</a>.</p>
+
+                        <br>
+
+                        <p><strong>Har du en Staalkontroll GSM-styring?</strong></p>
+
+                        <p>Staalkontroll vil bil helt faset ut innen utgangen av 2024.</p>
+
+
+                        <a href="/utfasing-gsm-staalkontroll.html">
+                            <button>Les mer om utfasingen</button>
+                          </a>
+
             </div>
         </div>
     </main>
