--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 
                         <br>
 
+                        <p><strong>Vi opplever driftsproblemer</strong></p>
+
+                        <p>
+                            <mark>
+                                Det er oppdaget et problem med oppdatering av brukere via webgrensesnitt på eldre gsm-enheter. Utviklere er varslet og vi oppdaterer nettsiden fortløpende når problemet er løst.
+                            </mark>
+                        </p>
+
+                        <br>
+
                         <p><strong>Har du en Staalkontroll GSM-styring?</strong></p>
 
                         <p>Staalkontroll vil bil helt faset ut innen utgangen av 2024.</p>
