--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
                         <br>
 
-                        <p><strong>Vi opplever driftsproblemer</strong></p>
+                        <p><strong>Driftsproblem kan være løst – verifisering pågår</strong></p>
 
                         <p>
                             <mark>
-                                Det er oppdaget et problem med oppdatering av brukere via webgrensesnitt på eldre gsm-enheter. Utviklere er varslet og vi oppdaterer nettsiden fortløpende når problemet er løst.
+                                Det er oppdaget et problem med oppdatering av brukere via webgrensesnitt på eldre gsm-enheter. Dette virker nå til å være løst, men verifisering pågår fortsatt for alle enheter.
                             </mark>
                         </p>
 
